# mtkclient

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README-INSTALL.md  README-INSTALL.zh-CN.md  README-USAGE.md  README-USAGE.zh-CN.md  README-WINDOWS.md  README-WINDOWS.zh-CN.md  README.md  README.zh-CN.md  default.nix  flake.nix  learning_resources.md  mtk.bat  mtk.py  mtk_api.py  mtk_console.spec  mtk_gui.bat  mtk_gui.py  mtk_iot_api.py  mtk_standalone.spec  mtk_tcpip_client.py  mtk_tcpip_server.py  preloader_cancunn.img  pyproject.toml  requirements.txt  run.example  shell.nix  stage2.py
.github/: FUNDING.yml
.github/workflows/: python-app.yml  stale.yml
Setup/Linux/: 50-android.rules  51-edl.rules  52-mtk.rules
Setup/Linux/kernelpatches/: disable-usb-checks-5.10.patch  disable-usb-checks-5.8.1.patch
Tools/: brom_to_offs.py  da_info.txt  da_parser.py  decode.py  emulate_preloader.py  enc_test.py  get_preloader_values.py  hardcoded_partition.py  mmc_init.txt  mmc_only_init.txt  nb0extract.py  parsebootrom.sh  patch_legacy.py  patch_preloader.py  preloader_emu_mmc.py  preloader_to_dram.py  rpmb_test.py  samsung_decode.py  tee.json  whitelist_parser.py
mtkclient/Loader/Preloader/: preloader_M013F_U1.img  preloader_a05ba.img  preloader_a05bd.img  preloader_rlk6580_we_c_m.bin.CA78985116  preloader_yuanda6580_weg_l.bin.AF162DA769
mtkclient/config/: brom_config.py  devicedb.py  missing_brom.txt  mtk_config.py  payloads.py  usb_ids.py
mtkclient/gui/: collapsible_splitter.py  connect_info.py  connect_info.ui  connect_info_ui.py  create_gui.sh  eraseFlashPartitions.py  main_gui.py  main_gui.ui  readFlashPartitions.py  themes.py  toolkit.py  toolsMenu.py  unlock_gui.ui  writeFlashPartitions.py
src/stage1/: Makefile  build.md  emulate_payload.py  runtest.sh
(+81 files in other folders)
